<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_marginTop="10dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
       <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/txtShouldTimes"/>
       <EditText 
           android:id="@+id/etShouldTimes"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:hint="@string/txtInputShouldTimes"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_marginTop="10dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
       
        <Button 
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSave"/>
        <Button 
            android:id="@+id/btnCancel"
            android:layout_marginLeft="10dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCancel"/>
    </LinearLayout>     

</LinearLayout>
