<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.meiming.registrationhelper.MainActivity" >

	<Button 
	    android:id="@+id/btnRegistration"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	    android:background="@drawable/registration_button_selelcter"/>
	
	<LinearLayout 
	    android:id="@+id/llTimes"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/btnRegistration"
        android:layout_alignLeft="@id/btnRegistration"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:gravity="center">
        
        <TextView
            android:id="@+id/lbTimesReal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/realTimes"/>

        <TextView
            android:id="@+id/lbTimesShould"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:text="@string/shouldTimes"/>

	</LinearLayout>

	<LinearLayout
	    android:id="@+id/header" 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_below="@id/llTimes"
	    android:gravity="left">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="60dip"
	        android:text="@string/regPeriod"/>
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="80dip"
	        android:text="@string/regPeriod"/>
	</LinearLayout>
	
	<ListView 
	    android:id="@+id/registrationInfo"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/header">
	    
	</ListView>

</RelativeLayout>
